--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.data.mongodb.uri=//yousifmohamed51:Yousif12@cluster0.jo9lum4.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=Users
+//spring.data.mongodb.database=Users
+spring.data.mongodb.port=27017
+java=-jar my-spring-boot-app.jar --spring.data.mongodb.port=27017
+
+//spring.data.mongodb.uri=<your-connection-string>
+spring.data.mongodb.host=your-mongodb-host
+//spring.data.mongodb.port=mongodb+srv://yousifmohamed51:<Yousif12>@cluster0.jo9lum4.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=your-mongodb-database
+spring.data.mongodb.username=your-mongodb-username
+spring.data.mongodb.password=your-mongodb-password
+
